@@ -1,3 +1,6 @@
+	* Added BadWords.list, to list the bad words currently being
+	censored by the bot.
+	
 	* Changed Misc.help to allow plugins to specify their own help,
 	and added help for several of the more confusing plugins.
 	
